observability/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: apps
        - name: dariolab-cors
          namespace: apps
        - name: rate-limit-global
          namespace: apps
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    store:
      name: default
      namespace: kube-system
